# aeris

./: .gitignore  README.md  main.py  pyproject.toml  test.txt
domain/core/: memory.py
domain/home/: room.py
domain/primitives/: control.py  file.py  time.py
llm/: session.py
llm/openai/: client.py  models.py
llm/openai/models/: chat.py  embeddings.py
