[tool.poetry]
name = "gpt-testing"
version = "0.1.0"
description = ""
authors = ["Jay Madden <jaymaddencox@gmail.com>"]
readme = "README.md"
packages = [{include = "gpt_testing"}]

[tool.poetry.scripts]
lint = 'black . && isort .'

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^2.2.1"
openai = "^0.27.8"
pytz = "^2023.3"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
